--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "notiflix": "^3.2.2",
+    "swiper": "^7.3.2",
     "tui-pagination": "^3.4.1"
   }
 }
